area does not fit, do not move then click, needs to be fixed

--- a/app/main/welcome/SoulCreation.module.css
+++ b/app/main/welcome/SoulCreation.module.css
@@ -391,7 +391,7 @@
 
 .middleOverlayWrap {
   position: absolute;
-  transform: translate(-50%, -50%);
+  transform: translate(calc(-50% + var(--joy-x, 0px)), calc(-50% + var(--joy-y, 0px)));
   z-index: 2;
   transition: opacity 2.5s ease;
 }
